*Empty MediaWiki Message*

--- a/Šomod'_(agj).mw
+++ b/Šomod'_(agj).mw
@@ -7,22 +7,21 @@
 === Lidnad ===
 [[Fail:HU county Somogy.svg|thumbnail|right|250px|Šomod'-agjan kart]]
 Siš agjas om 16 lidnad:
-
 * [[Balatonboglar]] (''Balatonboglár'')
-* [[Balatonfel'dvar]] (''Balatonföldvár'')
+* [[Balatonföl'dvar]] (''Balatonföldvár'')
 * [[Balatonlelle]] (''Balatonlelle'')
 * [[Barč]] (''Barcs'')
 * [[Čurgo]] (''Csurgó'')
 * [[Fon'jod]] (''Fonyód'')
-* [[Igal]] (''Igal'')
+* [[Igal']] (''Igal'')
 * [[Kadarkut]] (''Kadarkút'')
 * [[Kapošvar]] (''Kaposvár'')
-* [[Lend'eltoti]] (''Lengyeltóti'')
+* [[Lend'jel'toti]] (''Lengyeltóti'')
 * [[Marcali]] (''Marcali'')
-* [[Nad'atad]] (''Nagyatád'')
+* [[Nad'jatad]] (''Nagyatád'')
 * [[Nad'bajom]] (''Nagybajom'')
-* [[Siofok]] (''Siófok'')
-* [[Tab]] (''Tab'')
+* [[Šiofok]] (''Siófok'')
+* [[Tab (lidn, Mad'jaranma)|Tab]] (''Tab'')
 * [[Zamardi]] (''Zamárdi'')
 
 Päiči lidnoiš, Šomod'as om 245 žilod.
