--- a/Vener.mw
+++ b/Vener.mw
@@ -3,7 +3,7 @@
 [[Fail:Venus symbol.svg|left|30px]]
 '''Vener''' om toine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Matk Veneraspäi Päiväižehesai om läz 108 208 000 kilometrad. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 224,7 maižes päiväs. 
 
-Veneral oma vepsläižed nimed: '''''Ehttähthaine''''', '''''Homendeztähthäine''''' da '''''Zor'atähthaine'''''.
+Veneral oma vepsläižed nimed: '''''Ehttähtaz''''', '''''Homendeztähtaz''''' da '''''Zor'atähtaz'''''.
 
 Veneral ei ole londuseližid kaimdajoid; no om [[kvazikaimdai]] — [[2002 VE68|2002 VE<sub>68</sub>]]-asteroid, kudamb om lujas läheline planetannoks. Aigemba tedomehed kacui todesta [[Veneran kaimdajad|niiden olend]].
 {{stub}}
