*Empty MediaWiki Message*

--- a/Merilin_Monro.mw
+++ b/Merilin_Monro.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Marilyn Monroe - publicity.JPG|thumb|right|240px|Merilin Monro läz 1948—1949 vl]]
-'''Merilin Monro''' ([[Anglijan kel'|angl.]] ''Marilyn Monroe'', todesine nimi — '''Norma Džin Mortenson''' ([[Anglijan kel'|angl.]] ''Norma Jeane Mortensоn''); [[1. kezaku]] [[1926]], [[Los-Andželes]], [[AÜV]] — [[5. eloku]] [[1962]], [[Los-Andželes]], [[AÜV]]) oli [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] kinoaktör, pajatai i [[seks-simvol]].
+'''Merilin Monro''' ([[Anglijan kel'|angl.]] ''Marilyn Monroe'', todesine nimi — '''Norma Džin Mortenson''' ([[Anglijan kel'|angl.]] ''Norma Jeane Mortensоn''); [[1. kezaku]] [[1926]], [[Los-Andželes]], [[AÜV]] — [[5. eloku]] [[1962]], [[Los-Andželes]], [[AÜV]]) oli [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] kinoaktör, pajatai i [[sekssimvol]].
 
 {{stub}}
 
