/* Agjad (med'jed) */

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -44,6 +44,26 @@ Mad'jaranmas om [[Mad'jaranman lidnad|346 lidnad]], kudambad mülüdas 19 agjoih
 * [[Suvidunajantagaine rand]]
 
 === Agjad (med'jed) ===
+# Mad'jaranman nimi -> [[Vepsän kel'|Vepsän]] nimi
+# Bács-Kiskun megye -> [[Bač Kiškun]]
+# Baranya megye-> [[Baran'j (agj)]]
+# Békés megye-> [[Bekeš (agj)]]
+# Borsod-Abaúj-Zemplén megye-> [[Boršod Abaui Zemplen]]
+# Csongrád megye -> [[Čongrad (agj)]]
+# Fejér megye-> [[Fejer]]
+# Győr-Moson-Sopron megye-> [[D'jor Mošon Šopron]]
+# Hajdú-Bihar megye-> [[Haidu Bihar]]
+# Heves megye -> [[Heveš (agj)]]
+# Jász-Nagykun-Szolnok megye-> [[Jas Nad'kun Sol'nok]]
+# Komárom-Esztergom megye-> [[Komarom Estergom]]
+# Nógrád megye-> [[Nograd (agj)]]
+# Pest megye-> [[Pešt (agj)]]
+# Somogy megye -> [[Šomod' (agj)]]
+# Szabolcs-Szatmár-Bereg megye-> [[Sabol'č Satmar Bereg]]
+# Tolna megye-> [[Tol'n]]
+# Vas megye-> [[Vaš]]
+# Veszprém megye-> [[Vesprem (agj)]]
+# Zala megye-> [[Zal (agj)]]
 
 == Eläjad ==
 
