/* Agjad (med'jed) */

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -64,7 +64,7 @@ Mad'jaranmas om sur' lidnad: [[Budapešt]], [[Debrecen]], [[D'jor]], [[Kečkemet
 # Tolna megye-> [[Tol'n]]
 # Vas megye-> [[Vaš]]
 # Veszprém megye-> [[Vesprem (agj)]]
-# Zala megye-> [[Zal (agj)]]
+# Zala megye-> [[Zal' (agj)]]
 
 == Eläjad ==
 
