*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -144,7 +144,7 @@
 |-
 | '''[[Batasek]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tol'n]]
+| [[Tol'n (agj)|Tol'n]]
 | 6388
 |-
 | '''[[Baton'teren'je]]'''
@@ -219,7 +219,7 @@
 |-
 | '''[[Bon'had]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tol'n]]
+| [[Tol'n (agj)|Tol'n]]
 | 13741
 |-
 | '''[[Boršodnadašt]]'''
@@ -344,7 +344,7 @@
 |-
 | '''[[Dombovar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tol'n]]
+| [[Tol'n (agj)|Tol'n]]
 | 19494
 |-
 | '''[[Dombrad]]'''
@@ -359,7 +359,7 @@
 |-
 | '''[[Dunafül'dvar]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tol'n]]
+| [[Tol'n (agj)|Tol'n]]
 | 8666
 |-
 | '''[[Dunaharasti]]'''
@@ -524,7 +524,7 @@
 |-
 | '''[[D'jonk]]'''
 | [[Suvidunajantagaine rand]]
-| [[Tol'n]]
+| [[Tol'n (agj)|Tol'n]]
 | 2066
 |-
 | '''[[D'jor]]'''
