/* Agjad (med'jed) */

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -61,7 +61,7 @@ Mad'jaranmas om sur' lidnad: [[Budapešt]], [[Debrecen]], [[D'jor]], [[Kečkemet
 # Pest megye-> [[Pešt (agj)]]
 # Somogy megye -> [[Šomod' (agj)]]
 # Szabolcs-Szatmár-Bereg megye-> [[Sabol'č Satmar Bereg]]
-# Tolna megye-> [[Tol'n]]
+# Tolna megye-> [[Tol'n (agj)|Tol'n]]
 # Vas megye-> [[Vaš]]
 # Veszprém megye-> [[Vesprem (agj)]]
 # Zala megye-> [[Zal' (agj)]]
