*Empty MediaWiki Message*

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -33,7 +33,8 @@ Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
 
 === Administrativine jagand ===
 Mad'jaranmas om [[Mad'jaranman lidnad|346 lidnad]], kudambad mülüdas 19 agjoihe ([[med'je]]d), a ned — 7 regionoihe.
-Mad'jaranmas om sur' lidnad: [[Budapešt]], [[Debrecen]], [[D'jor]], [[Kečkemet]], [[Miškol'c]], [[N'jired'haz]], [[Peč]], [[Seged]], [[Sekešfehervar]].
+
+Kaikiš surembad lidnad Mad'jaranmas oma [[Budapešt]], [[Debrecen]], [[D'jor]], [[Kečkemet]], [[Miškol'c]], [[N'jired'haz]], [[Peč]], [[Seged]] da [[Sekešfehervar]].
 
 === Regionad ===
 * [[Keskuzdunajantagaine rand]] 
