/* Agjad (med'jed) */

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -46,26 +46,26 @@ Kaikiš surembad lidnad Mad'jaranmas oma [[Budapešt]], [[Debrecen]], [[D'jor]],
 * [[Suvidunajantagaine rand]]
 
 === Agjad (med'jed) ===
-# Mad'jaranman nimi -> [[Vepsän kel'|Vepsän]] nimi
-# Bács-Kiskun megye -> [[Bač Kiškun]]
-# Baranya megye-> [[Baran'j (agj)]]
-# Békés megye-> [[Bekeš (agj)]]
-# Borsod-Abaúj-Zemplén megye-> [[Boršod Abaui Zemplen]]
-# Csongrád megye -> [[Čongrad (agj)]]
-# Fejér megye-> [[Fejer]]
-# Győr-Moson-Sopron megye-> [[D'jor Mošon Šopron]]
-# Hajdú-Bihar megye-> [[Haidu Bihar]]
-# Heves megye -> [[Heveš (agj)]]
-# Jász-Nagykun-Szolnok megye-> [[Jas Nad'kun Sol'nok]]
-# Komárom-Esztergom megye-> [[Komarom Estergom]]
-# Nógrád megye-> [[Nograd (agj)]]
-# Pest megye-> [[Pešt (agj)]]
-# Somogy megye -> [[Šomod' (agj)]]
-# Szabolcs-Szatmár-Bereg megye-> [[Sabol'č Satmar Bereg]]
-# Tolna megye-> [[Tol'n (agj)|Tol'n]]
-# Vas megye-> [[Vaš]]
-# Veszprém megye-> [[Vesprem (agj)]]
-# Zala megye-> [[Zal' (agj)]]
+Valdkundas om 19 m. k. „med'jed“ (agjad).
+# [[Bač Kiškun]] (''Bács-Kiskun megye'')
+# [[Baran'j (agj)|Baran'j]] (''Baranya megye'')
+# [[Bekeš (agj)|Bekeš]] (''Békés megye'')
+# [[Boršod Abaui Zemplen]] (''Borsod-Abaúj-Zemplén megye'')
+# [[Čongrad (agj)|Čongrad]] (''Csongrád megye'')
+# [[D'jor Mošon Šopron]] (''Győr-Moson-Sopron megye'')
+# [[Fejer]] (''Fejér megye'')
+# [[Haidu Bihar]] (''Hajdú-Bihar megye'')
+# [[Heveš (agj)|Heveš]] (''Heves megye'')
+# [[Jas Nad'kun Sol'nok]] (''Jász-Nagykun-Szolnok megye'')
+# [[Komarom Estergom]] (''Komárom-Esztergom megye'')
+# [[Nograd (agj)|Nograd]] (''Nógrád megye'')
+# [[Pešt (agj)|Pešt]] (''Pest megye'')
+# [[Sabol'č Satmar Bereg|Sabol'č Satmar Bereg]] (''Szabolcs-Szatmár-Bereg megye'')
+# [[Šomod' (agj)|Šomod']] (''Somogy megye'')
+# [[Zal (agj)|Zal]] (''Zala megye'')
+# [[Tol'n (agj)|Tol'n]] (''Tolna megye'')
+# [[Vaš]] (''Vas megye'')
+# [[Vesprem (agj)|Vesprem]] (''Veszprém megye'')
 
 == Eläjad ==
 
