*Empty MediaWiki Message*

--- a/Nograd_(agj).mw
+++ b/Nograd_(agj).mw
@@ -1,18 +1,17 @@
 '''Nograd''' ([[Mad'jaran kel'|mad'j]].: ''Nógrád megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
-Nograd-agjan administrativine keskuz da kaikiš suremb lidn om [[Šalgotarjan]].
+Nograd-agjan administrativine keskuz da kaikiš suremb lidn om [[Šal'gotarjan]].
 
 == Administrativine jagand ==
 
 === Lidnad ===
 [[Fail:HU county Nograd.svg|thumbnail|right|250px|Nograd-agjan kart]]
 Siš agjas om 6 lidnad:
-
 * [[Balaššad'jarmat]] (''Balassagyarmat'')
 * [[Baton'teren'je]] (''Bátonyterenye'')
 * [[Pasto]] (''Pásztó'')
 * [[Retšag]] (''Rétság'')
-* [[Šalgotarjan]] (''Salgótarján'')
+* [[Šal'gotarjan]] (''Salgótarján'')
 * [[Sečen']] (''Szécsény'')
 
 Päiči lidnoiš, Nogradas om 131 žilod.
