*Empty MediaWiki Message*

--- a/Baran'j_(agj).mw
+++ b/Baran'j_(agj).mw
@@ -7,8 +7,7 @@ Baran'j-agjan administrativine keskuz da kaikiš suremb lidn om [[Peč]].
 === Lidnad ===
 [[Fail:HU county Baranya.svg|thumbnail|right|250px|Baran'j-agjan kart]]
 Siš agjas om 14 lidnad:
-
-* [[Boi]] (''Bóly'')
+* [[Boi (lidn, Mad'jaranma)|Boi]] (''Bóly'')
 * [[Harkan']] (''Harkány'')
 * [[Komlo]] (''Komló'')
 * [[Kozarmišlen']] (''Kozármisleny'')
