*Empty MediaWiki Message*

--- a/Vaš.mw
+++ b/Vaš.mw
@@ -1,24 +1,23 @@
 '''Vaš''' ([[Mad'jaran kel'|mad'j]].: ''Vas megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
-Vaš-agjan administrativine keskuz da kaikiš suremb lidn om [[Sombathei]].
+Vaš-agjan administrativine keskuz da kaikiš suremb lidn om [[Sombathel']].
 
 == Administrativine jagand ==
 
 === Lidnad ===
 [[Fail:HU county Vas.svg|thumbnail|right|250px|Vaš-agjan kart]]
 Siš agjas om 13 lidnad:
-
 * [[Bük]] (''Bük'')
 * [[Cell'dömöl'k]] (''Celldömölk'')
 * [[Čepreg]] (''Csepreg'')
-* [[Janošhaza]] (''Jánosháza'')
+* [[Janošhaz]] (''Jánosháza'')
 * [[Körmend]] (''Körmend'')
 * [[Köseg]] (''Kőszeg'')
 * [[Örisentpeter]] (''Őriszentpéter'')
 * [[Repcelak]] (''Répcelak'')
 * [[Šarvar]] (''Sárvár'')
 * [[Sentgotthard]] (''Szentgotthárd'')
-* [[Sombathei]] (''Szombathely'')
+* [[Sombathel']] (''Szombathely'')
 * [[Vašvar]] (''Vasvár'')
 * [[Vep]] (''Vép'')
 
