*Empty MediaWiki Message*

--- a/Händikaz.mw
+++ b/Händikaz.mw
@@ -8,6 +8,16 @@ Historižiš aigoiš händikahan areal oli toine pindan mödhe jäl’ges ristit
 
 Venämäs om 6 händikahiden alaerikod: Tundran händikaz, Keskvenälaine (vai Evropalaine) mechändikas, [[Sibir'|Sibirin]] mechändikas, Step'händikaz, Kavkazan händikaz, [[Mongolii|Mongolijan]] händikaz. [[Karjalan Tazovaldkund|Karjalas]] om läz 480 evropalašt händikast (''Canis lupus lupus'').
 
+== Vepsän muštatišed händikahanke sidotud ==
+<blockquote>
+* ''Ala pane händikahale sor’m suhu.''
+* ''Händikahan jaugad söttas.''
+* ''Händika(ha)späi pageni, a sid’ kondi tabazi.''
+* ''Händikast kut taht söta, a üks’kaik kor’bhe kacub.''
+* ''Näl’ghine kuti händikaz.''
+* ''Vaiše kolnudele händikahale usko.''
+</blockquote>
+
 == Irdkosketused ==
 * [http://www.gov.karelia.ru/gov/News/2009/08/0819_14.html Händikahad Karjalas. Karjalan ohjastusen sait] ([[Venäkel'|venäkelel]], [[Suomen kel'|suomen kelel]], [[Englandin kel'|englandin kelel]])
 * [http://www.iucnredlist.org/apps/redlist/details/3746/0 Canis lupus] (englandin kelel)
