*Empty MediaWiki Message*

--- a/Zal_(agj).mw
+++ b/Zal_(agj).mw
@@ -1,28 +1,27 @@
-'''Zal'''' ([[Mad'jaran kel'|mad'j]].: ''Zala megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
+'''Zal''' ([[Mad'jaran kel'|mad'j]].: ''Zala megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
-Zal'-agjan administrativine keskuz da kaikiš suremb lidn om [[Zal'aegerseg]].
+Zal-agjan administrativine keskuz da kaikiš suremb lidn om [[Zalaederseg]].
 
 == Administrativine jagand ==
 
 === Lidnad ===
-[[Fail:HU county Zala.svg|thumbnail|right|250px|Zal'-agjan kart]]
+[[Fail:HU county Zala.svg|thumbnail|right|250px|Zal-agjan kart]]
 Siš agjas om 10 lidnad:
-
 * [[Heviz]] (''Hévíz'')
-* [[Kesthei]] (''Keszthely'')
+* [[Kesthel']] (''Keszthely'')
 * [[Lenti]] (''Lenti'')
 * [[Leten'je]] (''Letenye'')
-* [[Nad'jkaniž]] (''Nagykanizsa'')
-* [[Pača]] (''Pacsa'')
-* [[Zal'aegerseg]] (''Zalaegerszeg'')
-* [[Zal'akaroš]] (''Zalakaros'')
-* [[Zal'alövö]] (''Zalalövő'')
-* [[Zal'asentgrot]] (''Zalaszentgrót'')
+* [[Nad'kaniž]] (''Nagykanizsa'')
+* [[Pač (lidn)|Pač]] (''Pacsa'')
+* [[Zalaederseg]] (''Zalaegerszeg'')
+* [[Zalakaroš]] (''Zalakaros'')
+* [[Zalalövö]] (''Zalalövő'')
+* [[Zalasentgrot]] (''Zalaszentgrót'')
 
 Päiči lidnoiš, Zal'as om 258 žilod.
 
 === Rajonad ===
-Zal'-agjas om 6 rajonad.
+Zal-agjas om 6 rajonad.
 {{stub}}
 
 [[Kategorii:Mad'jaranma]]
