--- a/Zal_(agj).mw
+++ b/Zal_(agj).mw
@@ -18,7 +18,7 @@ Siš agjas om 10 lidnad:
 * [[Zalalövö]] (''Zalalövő'')
 * [[Zalasentgrot]] (''Zalaszentgrót'')
 
-Päiči lidnoiš, Zal'as om 258 žilod.
+Päiči lidnoiš, Zalas om 258 žilod.
 
 === Rajonad ===
 Zal-agjas om 6 rajonad.
