*Empty MediaWiki Message*

--- a/Tol'n_(agj).mw
+++ b/Tol'n_(agj).mw
@@ -7,15 +7,14 @@ Tol'n-agjan administrativine keskuz da kaikiš suremb lidn om [[Seksard]].
 === Lidnad ===
 [[Fail:HU county Tolna.svg|thumbnail|right|250px|Tol'n-agjan kart]]
 Siš agjas om 11 lidnad:
-
 * [[Batasek]] (''Bátaszék'')
 * [[Bon'had]] (''Bonyhád'')
 * [[Dombovar]] (''Dombóvár'')
-* [[Dunafül'dvar]] (''Dunaföldvár'')
+* [[Dunaföl'dvar]] (''Dunaföldvár'')
 * [[D'jonk]] (''Gyönk'')
 * [[Nad'man'jok]] (''Nagymányok'')
 * [[Pakš]] (''Paks'')
-* [[Šimontorn'ja]] (''Simontornya'')
+* [[Šimontorn'j]] (''Simontornya'')
 * [[Seksard]] (''Szekszárd'')
 * [[Tamaši]] (''Tamási'')
 * [[Tol'n (lidn)|Tol'n]] (''Tolna'')
