*Empty MediaWiki Message*

--- a/Kub_2:_Giperkub.mw
+++ b/Kub_2:_Giperkub.mw
@@ -1,3 +1,32 @@
+{{Fil'm
+ | Nimi         = Kub 2: Giperkub<br />Cube 2: Hypercube
+ | Kuva         = 
+ | Kuvan ümbrikirjutand = «Kub 2: Giperkuban» fil'mankor'
+ | Voz'         = [[2002]]
+ | Valdkund     = {{CAN}}
+ | Kel'         = [[anglijan kel'|anglijan]]
+ | Žanr         = [[fantastine fil'm|fantastik]]
+ | Režissör     = [[Sekula Andžei]]
+ | Scenarii     = [[Hud Šon]]<br />[[Barbaraš Erni]]<br />[[MakLaflen Lauren]]
+ | Muzikankirjutai = [[Orenštein Norman]]
+ | Idejan tegii = 
+ | Aktörad      = [[Matčett Keri]]<br />[[Vin Deivis Džerent]]<br />[[Linn Kung Greis]]<br />[[Fergüson Mettjü]]
+ | Prodüser     = [[Barbaraš Erni]]<br />[[Blok Piter]]<br />[[Kolvin Süzann]]
+ | Kompanii     = [[Lions Gate Entertainment]]
+ | Studii       = [[Ghost Logic]]
+ | Piduz        = 95 minutad
+ | Montaž       = [[Sanders Mark]]
+ | Operator     = [[Sekula Andžei|Andžei Sekula]]
+ | Arvlahjad    = 
+ | Büdžet       = tundmatoi
+ | Salhed       = tundmatomad
+ | Salhed Venämas = 
+ | Edeline fil'm    = [[Kub (fil'm)]]
+ | Jäl'ghine fil'm  = [[Kub zero]]
+ | Sait         = http://www.scifi.com/cube2/
+ | imdb_id      = 0285492
+ | kp_id        = 
+}}
 '''«Kub 2: Giperkub»''' ([[Anglijan kel'|angl.]] ''Cube 2: Hypercube'') om voden 2002 [[kanad]]alaine fantastine fil'm. [[Kub (fil'm)|"Kub"]]-fil'man jatk.
 
 Režissör  — [[Sekula Andžei|Andžei Sekula]].
