*Empty MediaWiki Message*

--- a/Kub_2:_Giperkub.mw
+++ b/Kub_2:_Giperkub.mw
@@ -12,7 +12,7 @@
  | Idejan tegii = 
  | Aktörad      = [[Matčett Keri]]<br />[[Vin Deivis Džerent]]<br />[[Linn Kung Greis]]<br />[[Fergüson Mettjü]]
  | Prodüser     = [[Barbaraš Erni]]<br />[[Blok Piter]]<br />[[Kolvin Süzann]]
- | Kompanii     = [[Lions Gate Entertainment]]
+ | Kompanii     = [[Lions&nbsp;Gate&nbsp;Entertainment]]
  | Studii       = [[Ghost Logic]]
  | Piduz        = 95 minutad
  | Montaž       = [[Sanders Mark]]
