*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -8,7 +8,7 @@
  | Žanr         = [[dokumentaline fil'm|dokumentaline]]
  | Režissör     = Aleksandr Tütrümov, A. Junisova
  | Scenarii     = Vladimir Studennikov, Natal'ja Loskutova
- | Muzikankrjutai = 
+ | Muzikankirjutai = 
  | Idejan tegii = 
  | Aktörad      = 
  | Prodüser     = Aleksandr Tütrümov
