*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -3,7 +3,7 @@
  | Kuva         = 
  | Kuvan ümbrikirjutand = «Vepsän zavetan» fil'mankor'
  | Voz'         = [[2009]]
- | Valdkund     = [[Venäma]]
+ | Valdkund     = {{RUS}}
  | Kel'         = [[venäkel'|venän]]
  | Žanr         = [[dokumentaline fil'm|dokumentaline]]
  | Režissör     = Aleksandr Tütrümov, A. Junisova
