--- a/Tranzit_(fil'm,_2012).mw
+++ b/Tranzit_(fil'm,_2012).mw
@@ -1,14 +1,14 @@
 {{Fil'm
  | Nimi         = Tranzit<br />Transit
- | Kuva         = 
+ | Kuva         = Transit_(2011_film)_poster.jpg
  | Kuvan ümbrikirjutand = «Tranzitan» fil'mankor'
  | Voz'         = [[2012]]
- | Valdkund     = [[AÜV]]
+ | Valdkund     = {{USA}}
  | Kel'         = [[anglijan kel'|anglijan]]
  | Žanr         = [[triller]]
  | Režissör     = Antonio Negret
  | Scenarii     = Maikl Gilvari
- | Muzikankrjutai = Kristofer Vestleik
+ | Muzikankirjutai = Kristofer Vestleik
  | Idejan tegii = 
  | Aktörad      = [[Kevizel Džim|Džim Kevizel]]<br />[[Frein Džeims|Džeims Frein]]<br />[[Beird Dajona|Dajona Beird]]<br />[[Röm Elizabet|Elizabet Röm]]<br />da toižed
  | Prodüser     = [[Salmon Kortni|Kortni Salmon]]<br />Moše Dajamant
@@ -19,7 +19,7 @@
  | Operator     = Jaron Levai
  | Arvlahjad    = 
  | Büdžet       = $5,000,000
- | Salhed       = ''[[direct-to-video]]''
+ | Salhed       = $1,000,000
  | Salhed Venämas = 
  | Edeline fil'm    = 
  | Jäl'ghine fil'm  = 
