это каждый-то постер надо копировать в свою википедию:(

--- a/Tranzit_(fil'm,_2012).mw
+++ b/Tranzit_(fil'm,_2012).mw
@@ -1,6 +1,6 @@
 {{Fil'm
  | Nimi         = Tranzit<br />Transit
- | Kuva         = Transit_(2011_film)_poster.jpg
+ | Kuva         = 
  | Kuvan ümbrikirjutand = «Tranzitan» fil'mankor'
  | Voz'         = [[2012]]
  | Valdkund     = {{USA}}
