--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -1,7 +1,7 @@
 '''Pol Uil'jam Uoker IV''' ([[anglijan kel'|angl.]]: ''Paul William Walker IV''; sünd. [[12. sügüz'ku]] [[1973]], [[Glindeil (Kalifornii)]], [[AÜV]] — kol. [[30. kül'mku]] [[2013]], [[Santa Klarit]], [[AÜV]]) oli tetab amerikalaine aktör da model'.
 
 == Biografii ==
-Sündi vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalaiž]]-[[amerikalaižed|amerikalaižes]] kanzas. Openui [[Hristanuskondaline škol San Velliš|Hristanuskondaližes školas San Velliš]], a edelespäi — [[Kalifornijan kolledž|Kalifornijan kolledžas]] ([[meribiologii|meribiologas]]), no jäi openduz mel'hetartusen tagapäi kinočomamahtas.
+Sündud vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalaiž]]-[[amerikalaižed|amerikalaižes]] kanzas. Openui [[Hristanuskondaline škol San Velliš|Hristanuskondaližes školas San Velliš]], a edelespäi — [[Kalifornijan kolledž|Kalifornijan kolledžas]] ([[meribiologii|meribiologas]]), no jäi openduz mel'hetartusen tagapäi kinočomamahtas.
 
 Hänen kaikiš tetabamb mel'kuva [[kinematograf|kinos]] — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
 {{stub}}
