*Empty MediaWiki Message*

--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -3,9 +3,12 @@
 == Biografii ==
 Sündud vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalaiž]]-[[amerikalaižed|amerikalaižes]] kanzas. Openui [[Hristanuskondaline škol San Velliš|Hristanuskondaližes školas San Velliš]], a edelespäi — [[Kalifornijan kolledž|Kalifornijan kolledžas]] ([[meribiologii|meribiologas]]), no jäi openduz mel'hetartusen tagapäi kinočomamahtas.
 
-Hänen kaikiš tetabamb mel'kuva [[kinematograf|kinos]] — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
+Ezmäine rol' «sures kinos» oli „professoran“ Bennettan rol' «[[Monstr škapaspäi]]»-fil'mas (1986). Hänen kaikiš tetabamb mel'kuva [[kinematograf|kinos]] — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
+
+Vn 2013 kül'mkun 2013 päiväl Pol koli [[avtokatastrof]]he, sebranikan avtos. Hänel jäi tütär Midou Rein.
 {{stub}}
 
 [[Kategorii:Aktörad kirjamišton mödhe]]
 [[Kategorii:AÜV:oiden aktörad]]
+[[Kategorii:Lapsenaktörad]]
 [[Kategorii:Modelid]]
