--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -1,11 +1,14 @@
 '''Pol Uil'jam Uoker IV''' ([[anglijan kel'|angl.]]: ''Paul William Walker IV''; sünd. [[12. sügüz'ku]] [[1973]], [[Glindeil (Kalifornii)]], [[AÜV]] — kol. [[30. kül'mku]] [[2013]], [[Santa Klarit]], [[AÜV]]) oli tetab amerikalaine aktör da model'.
 
 == Biografii ==
-Sündud vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalaiž]]-[[amerikalaižed|amerikalaižes]] kanzas. Openui [[Hristanuskondaline škol San Velliš|Hristanuskondaližes školas San Velliš]], a edelespäi — [[Kalifornijan kolledž|Kalifornijan kolledžas]] ([[meribiologii|meribiologas]]), no jäi openduz mel'hetartusen tagapäi kinočomamahtas.
+Sündud vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalaiž]]-[[amerikalaižed|amerikalaižes]] kanzas. Openui [[Hristanuskondaline škol San Velliš|Hristanuskondaližes školas San Velliš]], a edelespäi — [[Kalifornijan kolledž|Kalifornijan kolledžas]] ([[meribiologii|meribiologas]]), no jäi openduz mel'hetartusen tagapäi [[kinematograf|kinočomamahtas]].
 
-Ezmäine rol' «sures kinos» oli „professoran“ Bennettan rol' «[[Monstr škapaspäi]]»-fil'mas (1986). Hänen kaikiš tetabamb mel'kuva [[kinematograf|kinos]] — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
+Ezmäine rol' «sures kinos» oli „professoran“ Bennettan rol' «[[Monstr škapaspäi]]»-fil'mas (1986). Hänen kaikiš tetabamb mel'kuva — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
 
 Vn 2013 kül'mkun 2013 päiväl Pol koli [[avtokatastrof]]he, sebranikan avtos. Hänel jäi tütär Midou Rein.
+
+== Mel'hetartujad faktad ==
+* Hänel oli [[brazilijalaižen džiudžitsu]]n purpurine vö.
 {{stub}}
 
 [[Kategorii:Aktörad kirjamišton mödhe]]
