*Empty MediaWiki Message*

--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -5,10 +5,13 @@ Sündud vl [[1973]] [[Kalifornii|Kalifornijas]], [[irlandijalaižed|irlandijalai
 
 Ezmäine rol' «sures kinos» oli „professoran“ Bennettan rol' «[[Monstr škapaspäi]]»-fil'mas (1986). Hänen kaikiš tetabamb mel'kuva — '''[[Brajan O'Konnor|Brajanan O'Konnoran]]''' rol' [[Forsaž (fil'mserii)|Forsaž-fil'mfranšizas]], kudamban täht hän fil'mi koumetoštkümne voziden (2000—2013) joksten.
 
-Vn 2013 kül'mkun 2013 päiväl Pol koli [[avtokatastrof]]he, sebranikan avtos. Hänel jäi tütär Midou Rein.
+Vn 2013 kül'mkun 2013 päiväl Pol koli [[avtokatastrof]]ha, sebranikan avtos. Hänel jäi tütär Midou Rein.
 
 == Mel'hetartujad faktad ==
 * Hänel oli [[brazilijalaižen džiudžitsu]]n purpurine vö.
+
+== Irdkosketused ==
+* [http://www.imdb.com/name/nm0908094/ Polan Uokeran leht iMDb:as]
 {{stub}}
 
 [[Kategorii:Aktörad kirjamišton mödhe]]
