--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -1,3 +1,4 @@
+[[Fail:PaulWalkerMar09.jpg|thumbnail|right|250px|Pol Uoker, 2009]]
 '''Pol Uil'jam Uoker IV''' ([[anglijan kel'|angl.]]: ''Paul William Walker IV''; sünd. [[12. sügüz'ku]] [[1973]], [[Glindeil (Kalifornii)]], [[AÜV]] — kol. [[30. kül'mku]] [[2013]], [[Santa Klarit]], [[AÜV]]) oli tetab amerikalaine aktör da model'.
 
 == Biografii ==
