*Empty MediaWiki Message*

--- a/Uoker_Pol.mw
+++ b/Uoker_Pol.mw
@@ -8,11 +8,26 @@ Ezmäine rol' «sures kinos» oli „professoran“ Bennettan rol' «[[Monstr š
 
 Vn 2013 kül'mkun 2013 päiväl Pol koli [[avtokatastrof]]ha, sebranikan avtos. Hänel jäi tütär Midou Rein.
 
+== Fil'mografii (lugemata serialoiden da massovkan) ==
+* ''[[Monstr škapaspäi]]'' (1986)
+* ''[[Programiruitud kačustada]]'' (1987)
+* ''[[Tammi da dinozavr]]'' (1994)
+* ''[[Vastagat Didlad]]'' (1998)
+* ''[[Plezantvill' (fil'm)|Plezantvill']]'' (1998)
+* ''[[Üläopenikjouk]]'' (1998)
+* ''[[Se kaiken hänespäi]]'' (1998)
+* ''[[Pämall'ad]]'' (2000)
+* ''[[Forsaž 1]]'' (2001)
+* ''[[Džoi-raid]]'' (2001)
+* ''[[Om-ik elonhama, ku oled tetab]]'' (2002)
+* ''[[
+
 == Mel'hetartujad faktad ==
 * Hänel oli [[brazilijalaižen džiudžitsu]]n purpurine vö.
 
 == Irdkosketused ==
 * [http://www.imdb.com/name/nm0908094/ Polan Uokeran leht iMDb:as]
+{{Forsaž}}
 {{stub}}
 
 [[Kategorii:Aktörad kirjamišton mödhe]]
