--- a/Kub_2:_Giperkub.mw
+++ b/Kub_2:_Giperkub.mw
@@ -23,6 +23,7 @@
  | Salhed Venämas = 
  | Edeline fil'm    = [[Kub (fil'm)]]
  | Jäl'ghine fil'm  = [[Kub zero]]
+ | Röunatuz igäs = 
  | Sait         = http://www.scifi.com/cube2/
  | imdb_id      = 0285492
  | kp_id        = 
