*Empty MediaWiki Message*

--- a/Sar'_(fil'm,_Venäma,_2006).mw
+++ b/Sar'_(fil'm,_Venäma,_2006).mw
@@ -1,8 +1,38 @@
+{{Fil'm
+ | Nimi         = Sar'<br />Остров
+ | Kuva         = Постер фильма Остров.jpg
+ | Kuvan ümbrikirjutand = «Saren» fil'mankor'
+ | Voz'         = [[2006]]
+ | Valdkund     = {{RUS}}
+ | Kel'         = [[venäkel'|venän]]
+ | Žanr         = [[dramatine fil'm|mujukaz dramfil'm]]
+ | Režissör     = [[Lungin Pavel]]
+ | Scenarii     = [[Sobolev Dmitrii]]
+ | Muzikankirjutai = [[Martinov Vladimir]]
+ | Idejan tegii = 
+ | Aktörad      = [[Mamonov Pötr]]<br />[[Suhorukov Viktor]]<br />[[Düžev Dmitrii]]
+ | Prodüser     = [[Lungin Pavel]]<br />[[Šumakov Sergei]]<br />[[Vasiljeva Ol'ga]]
+ | Kompanii     = 
+ | Studii       = Lunginan Pavlan studii
+ | Piduz        = 112 minutad
+ | Montaž       = [[Antipenko Al'bina]]
+ | Operator     = [[Žegalov Andrei]]
+ | Arvlahjad    = 6 "[[Kuldor'ol (kinopremii)|Kuldor'ol]]"-premijad<br />6 "[[Nika (kinopremii)|Nika]]"-premijad
+ | Büdžet       = $1 900 000
+ | Salhed       = $2 642 434
+ | Salhed Venämas = 
+ | Edeline fil'm    = 
+ | Jäl'ghine fil'm  = 
+ | Röunatuz igäs = 0+
+ | Sait         = http://www.ostrov-film.ru/
+ | imdb_id      = 0851577
+ | kp_id        = 
+}}
 '''«Sar'»''' ([[venäkel'|ven.]] ''Остров'') — dramfil'm, kuvitadud vl. 2006 [[Venäma]]s, tobjimalaz [[Kem'|Kemiš]], [[Karjal|Pohjoižes Karjalas]].
 
-Režissör — [[Lungin Pavel Semönovič|Pavel Lungin]].
+Režissör — [[Lungin Pavel|Pavel Lungin]].
 
-== Kinostarin ==
+== Kinotarin ==
 [[Sur' Tatanman voin|Suren Tatanman voinan]] aigan vl. 1942 kus-se Pohjoižes saksalaižed anastaba [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundlaižen]] [[barž]]an, kudamb veb [[kivihil'|kivihiled]]. Laivas oma Tihon-[[peramez']] da Anatolii-[[lämbitai]]. Molembad napriba kaitas kopaten hiles, no saksalaižed löuziba Anatolijad.
 
 <gallery>
@@ -29,19 +59,13 @@ Image:Russia Rabocheostrovsk Ostrovs scenery barge.jpg|Barž
 * 2007 — Kuz' "[[Kuldor'ol (kinopremii)|Kuldor'ol]]"-premijad.
 * 2007 — Kuz' "[[Nika (kinopremii)|Nika]]"-premijad.
 
-== Lähtendandmused da rahasatuz ==
-* Säduz: "Pavlan Lunginan studii".
-* Mujukaz dramfil'm.
-* Röunatuz igäs: 0+.
+== Lähtendandmused ==
 * Todištuz ozutamha # 11191 kezakun 21 päiväspäi vl. 2005.
 * Lähtend ozutamha: kül'mkun 23 päivän vl. 2006.
-* Büdžet: 1,9 mln. doll.
-* Rahantulo: 2 642 434 doll.
 * Üksjaine fil'm Venäman levedas ozutandas, miččel rahantulo ližadui toižen nedalin aigan.
 * Ezmäine ozutez kesktelenägudesel: vilukun 7 päivän 2007 vl., [[Venäma (telekanal)|Venäma-telekanalas]].
 
 == Irdkosketused ==
-* '''[http://www.ostrov-film.ru/ ostrov-film.ru]''' Oficialine sait.
 * [http://www.youtube.com/watch?v=NCyFtH6Xd1w Pavel Lungin Evgenijal Dodoleval ("Nostal'gii"-kanal)] [[Venän kel'|(ven.)]]
 * [http://www.rusk.ru/tema.php?idaid=42 Mel'vajehtelused ümbri Pavlan Lunginan fil'mas] [[Venän kel'|(ven.)]]
 * [http://dmitrysh.gorod.tomsk.ru/index-1319822418.php "Ostrov"-fil'man kuvitandan sijad (18 kuvad)]
