--- a/Višnii_Voločok.mw
+++ b/Višnii_Voločok.mw
@@ -27,14 +27,26 @@ Lidn sijadase Cnanjogen i Višnii Voločokan vezivaradimen randoil ([[Il'mjärv]
 Višnii Voločok om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 52 370 ristitud. Kaikiš suremb ristitišt oli vl 1973 — 76 tuhad eläjid.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 52 370 ristitud. Kaikiš suremb ristitišt oli 76 tuhad eläjid vl 1973.
 
 Ižandusen päsarakod oma tekstil'tegimišt (bumagonkombinat, trikotaž, omblendfabrik, edheotand pästamha villakoid) i sömtegimišt (liha- i leibkombinatad), mugažo stöklantegim (butulkad). Professionaližen opendusen aluzkundad: mehaniž-tehnologine tehnikum, medicinine kolledž, Tverin torguimiž-ekonomižen kolledžan alajaguz.
 
 Avtobusad oma kundaližtransportaks lidnas da sen ümbrištos. Ezilidnelektrojonused ühtenzoittas lidnad Bologojenke, Tverinke da Moskvanke.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Vyshny Volochek Museum.jpg|Kodirandantedištandmuzei (2010)
+Казанский монастырь Вышний Волочёк.jpg|Jumalanmaman Kazanin jumalaižen naižjumalankodi, vn 2020 nägu
+Vyshny Volochek Trade rows.jpg|Istorižed torguindrived, vn 2010 olend
+Vyshny Volochek Drama Theatre.jpg|Dramteatr (2010)
+Vyshny Volochyok, Tver Oblast, Russia - panoramio (231).jpg|Lidnan päraudtestancii vl 2012
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
-* [http://www.v.volochekadm.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''v.volochekadm.ru'').] {{ref-ru}}
+* [http://v-volok.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''v-volok.ru'').] {{ref-ru}}
 {{Commons|Category:Vyshny Volochyok}}
 
 {{Tverin agjan lidnad}}
