--- a/Ozörsk_(Kaliningradan_agj).mw
+++ b/Ozörsk_(Kaliningradan_agj).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 4,108
  | Voz' = 2017
  | Pind = 12
- | Fail = Панорама Озерска.jpg
+ | Fail =
  | Pämez' = Vladislav Nikonorov<br />(reduku 2015—)
  | Telefonkod = +7-40142-xx-xxx
  | Avtokod = 39. 91
