*Empty MediaWiki Message*

--- a/Ma.mw
+++ b/Ma.mw
@@ -1,6 +1,6 @@
 {{1000}}{{A10000}}
 {{Znamoičendad|Ma (znamoičendad)}}
-[[Fail:The Earth seen from Apollo 17.jpg|thumb|right|250px|Man fotokuva |[[Apollon-17]]-apparataspäi]]
+[[Fail:The Earth seen from Apollo 17.jpg|thumb|right|250px|Man fotokuva [[Apollon-17]]-apparataspäi]]
 '''Ma''' ([[latinan kel'|latinan kelel]]: ''Tellus'' vai ''Terra'') om koumanz' [[planet]] [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, kaikiš jaredamb diametran da vedusen mödhe Maižen gruppan planetoiden ([[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], Ma i [[Mars (planet)|Mars]]) keskes, tihedusen (ninevusen) mödhe — sisteman kaikiden planetoiden keskes. Man astronomižed znamad oma [[Fail:Globus cruciger (fixed width).svg|16px|♁]] i [[Fail:Earth symbol (bold).svg|16px|🜨]].
 
 == Sijaduz ==
