--- a/Ma.mw
+++ b/Ma.mw
@@ -7,12 +7,12 @@
 Matkad Maspäi Päiväižhesai om 149 597 887 kilometrad vai 1 [[astronomine ühtnik]]. Planet punose Päiväižes ümbri da tegeb kogonašt pörut 365,26 päiviš. Mugažo se punose ičeze värtmudes ümbri da tegeb kogonašt pörut 23 časus 56 minutas i 4.091 sekundas.
 
 == Kaimdai ==
-Mal üks'jäine sur' londuseline kaimdai om — [[Kudmaine]]. Keskmäine matk Man keskusespäi Kudmaižen keskushesai om läz 384 467 kilometrad. Erasti kactas «Ma — Ku»-sistemad kaks'jaižeks planetaks, molembad punotas [[barikeskuz|barikeskuses]] ümbri, se sijadase Man südäimes 4 671 kilometras keskusespäi, Man raduis — 6 378 km.
+Mal üks'jäine sur' londuseline kaimdai om — [[Kudmaine]]. Keskmäine matk Man keskusespäi Kudmaižen keskushesai om läz 384 467 kilometrad. Erasti kactas «Ma — Ku»-sistemad kaks'jaižeks planetaks, molembad punotas [[barikeskuz|barikeskuses]] ümbri, se sijadase Man südäimes 4 671 kilometras keskusespäi, Man radius — 6 378 km.
 
 == Planetan sauvuz ==
-Mal ičeze atmosfer om, nened elementad mülüdas sihe: [[azot]] (78,08%), [[hapanik]] (20,95%), [[argon]] (0,93%) da toižed. [[Biosfer]]an kazvand vajehti atmosferad znamasižešti. [[Magnitine kend]] om olmas, sikš miše planetan südäituk kogoneb [[raud]]aspäi vai [[nikel'|nikelišpäi]].
+Mal ičeze [[Man atmosfer|atmosfer]] om, nened elementad mülüdas sihe: [[azot]] (78,08%), [[hapanik]] (20,95%), [[argon]] (0,93%) da toižed. [[Biosfer]]an kazvand vajehti atmosferad znamasižešti. [[Magnitine kend]] om olmas, sikš miše planetan südäituk kogoneb [[raud]]aspäi vai [[nikel'|nikelišpäi]].
 
-Man pind om 510 072 000 nellikkilometrad. Necišpäi 70,8 procentad om [[Manvaldmeri|Manvaldmeren]] [[vezi|veded]]. Mülüdas Manvaldmerhe: [[Atlantine valdmeri|Atlantine]], [[Indine valdmeri|Indine]], [[Jävaldmeri|Jä-]], [[Suvivaldmeri|Suvi-]] da [[Tün' valdmeri|Tün']] valdmered. Valdmered da sal'med jagadas kuivmad kudhe kontinentha, ned oma [[Afrik]], [[Antarktid]], [[Avstralii (kontinent)|Avstralii]], [[Evrazii]], [[Pohjoižamerik]] i [[Suviamerik]].
+Man pind om 510 072 000 nellikkilometrad. Necišpäi 70,8 procentad om [[Manvaldmeri|Manvaldmeren]] [[vezi|veded]]. Mülüdas Manvaldmerhe: [[Atlantine valdmeri|Atlantine]], [[Indine valdmeri|Indine]], [[Jävaldmeri|Jä-]], [[Suvivaldmeri|Suvi-]] da [[Tün' valdmeri|Tün']] valdmered. Valdmered da sal'med jagadas kuivmad kudeks kontinentaks, ned oma [[Afrik]], [[Antarktid]], [[Avstralii (kontinent)|Avstralii]], [[Evrazii]], [[Pohjoižamerik]] i [[Suviamerik]].
 
 == Sündund ==
 Tedoližed andmused ozutadas, miše Ma om sänus [[Päiväine|Päiväižen]] sumegusespäi läz 4,54 milliardad vozid tagaze. Ma om mail'man üks'jäine planet eläbidenke olijoidenke. [[Elo]] om tulnu Male läz 3,5 milliardad vozid tagaze, elon kaičendan londuseližed arvoimižed lindäs olmas völ 0,5..2,3 mlrd vozid.
