*Empty MediaWiki Message*

--- a/Päiväižen_sistem.mw
+++ b/Päiväižen_sistem.mw
@@ -6,7 +6,7 @@ Sisteman päobjekt om [[Päiväine]] — G2V-[[spektraline klass|spektraližen k
 
 Päiväižen sistemha mülüb kahesa planetad: [[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], [[Ma (planet)|Ma]], [[Mars (planet)|Mars]], [[Jupiter (planet)|Jupiter]], [[Saturn (planet)|Saturn]], [[Uran (planet)|Uran]], [[Neptun (planet)|Neptun]]. Zavottihe pagišta aktivižin gipotetižes [[Ühesanz' planet|Ühesandes planetas]] vl 2016. [[Pluton (pen' planet)|Pluton]] nügüd' (vn 2006 jäl'ghe) ei lugekoi jo todesižeks planetaks. Sisteman ühthine mass om 1,0014 Päiväižen massad. Läz kaik sisteman objektad punosoiš ühtes tazopindas — ekliptikan tazopindas.
 
-Kaks' täuttud penil objektoil agjad oma Päiväižen sistemas. [[Asteroidine vö]] sijadase Marsan i Jupiteran orbitoiden keskes. Sen objektoiden mülünd om Man gruppan planetoihe pojav i kogoneb silikatoišpäi da metalloišpäi. Vönen surembad objektad oma liliputal'ne [[Cerer]]-planet, Pallad-, Vest- i Gigei-asteroidad. [[Transneptunižed objektad]] sijadasoiš Neptunan orbitan taga i kogotas jädunudes vedespäi, ammiakaspäi da metanaspäi. Kaikiš surembad niiden keskes oma [[Pluton]], [[Sedn]], [[Haumea]], [[Makemake]], [[Kvavar]], Ork i [[Erid]].
+Kaks' täuttud penil objektoil agjad oma Päiväižen sistemas. [[Asteroidine vö]] sijadase Marsan i Jupiteran orbitoiden keskes. Sen objektoiden mülünd om Man gruppan planetoihe pojav i kogoneb silikatoišpäi da metalloišpäi. Vönen surembad objektad oma liliputal'ne [[Cerer]]-planet, Pallad-, Vest- i Gigei-asteroidad. [[Transneptunižed objektad]] sijadasoiš Neptunan orbitan taga i kogotas jädunudes vedespäi, ammiakaspäi da metanaspäi. Kaikiš surembad niiden keskes oma [[Pluton]], [[Sedn]], [[Haumea]], [[Makemake]], [[Kvavar]], [[Ork]] i [[Erid]].
 
 == Homaičendad ==
 <references />
