--- a/Uglič.mw
+++ b/Uglič.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 32,146
  | Voz' = 2017
  | Pind = 26.6
- | Fail = Uglich View of the Kremlin IMG 1314 1725.jpg
+ | Fail = Углич с высоты птичьего полета.jpg
  | Pämez' = Svetlana Stavickaja<br />(viluku 2015—)
  | Telefonkod = +7-48532-xx-xxx
  | Avtokod = 76
@@ -32,6 +32,15 @@ Uglič om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 34 507 ristitud, rajonan seičeme kümnendest. Kaikiš suremb lidnan ristitišt oli enamba 39 tuhad eläjid vll 1979−1992 (39 975 rist. vl 1989). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalankodid<ref>[http://sobory.ru/geo/locat/145 Ugličun pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>, kaks' päjumalanpertid, kuz' jumalanpertid i viž časounäd oma olmas lidnas.
 
 Kaks' Ugličun kolledžad oma professionaližen opendusen aluzkundoikš: agrariž-politehnine<ref>[http://pl19uglich.ru/ Ugličun agrariž-politehnižen kolledžan sait (''pl19uglich.ru'')] i [http://umtt.ru/ enččen mehaniž-tehnologižen kolledžan sait (''umtt.ru'').] {{ref-ru}}</ref> i industrialiž-pedagogine<ref>[http://www.gou-uipk.ru/ Ugličun industrialiž-pedagogižen kolledžan sait (''gou-uipk.ru'').] {{ref-ru}}</ref>. Venäman argvoin da saguden tehmižen tedoinstitut sijadase lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Углич, администрация, Успенская площадь.JPG|Rajonan administracijan sauvuz (2015, ende Evrejinovad-torgovanoiden pert')
+Uglich View of the Kremlin IMG 1314 1725.jpg|Ugličun Kremlin pühäpertid, vn 2011 nägu
+Uglich hydroelectric power plant 01.jpg|Ugličun GES vl 2008
+- panoramio (2918).jpg|«Moskva»-adivpert' (2007)
+Г.Углич, Ярославской обл. Россия. - panoramio (3).jpg|Uglič-raudtestancijan sauvuz vl 2009
+</gallery>
 
 == Homaičendad ==
 <references/>
