--- a/Saturn.mw
+++ b/Saturn.mw
@@ -1,7 +1,7 @@
 {{1000}}{{A10000}}
 [[Fail:Saturn during Equinox.jpg|thumb|right|250px|Saturnan fotokuva [[Kassini—Güigens]]-stancijaspäi]]
 {{Znamoičendad|Saturn (znamoičendad)}}
-'''Saturn''' ({{lang-la|Saturnus}}) om kudenz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Planetan astronomine znam om [[Fail:Saturn symbol (fixed width).svg|16px|♄]]. Se kogoneb gazoišpäi, om sisteman kahtenz' surtte planet [[Jupiter (planet)|Jupiteran]] jäl'ghe.
+'''Saturn''' ({{lang-la|Saturnus}}) om kudenz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Planetan astronomine znam om [[Fail:Saturn symbol (bold).svg|16px|♄]]. Se kogoneb gazoišpäi, om sisteman kahtenz' surtte planet [[Jupiter (planet)|Jupiteran]] jäl'ghe.
 
 Planet om tetab ristitkundale amuižiš aigoišpäi. Rahvahidenkeskeine nimituz om anttud Amuižen Riman manümbriradmižen [[Saturn (mifologii)|Saturn-jumalan]] mödhe.
 
