--- a/Danilov_(lidn).mw
+++ b/Danilov_(lidn).mw
@@ -8,13 +8,13 @@
  | Eläjiden lugu = 14,868
  | Voz' = 2017
  | Pind = 11.82
- | Fail = Church of St. Nicholas. Danilov. February 2014 - panoramio.jpg
+ | Fail = 
  | Pämez' = Ivan Svečuškin<br />(sügüz'ku 2018—)
  | Telefonkod = +7-48538-xx-xxx
  | Avtokod = 76
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-[[Fail:Карта Данилова в 2012 году.jpg|thumb|left|250px|Vn 2012 lidnfartaliden kart.]]
+[[Fail:Карта Данилова в 2012 году.jpg|thumb|left|250px|Vn 2012 lidnfartaliden kart]]
 '''Danilov''' ({{lang-ru|Данилов}}) om [[Venäma]]n lidn da lidnankund [[Jaroslavlin agj]]an pohjoižpäivnouzmas. Se om [[Danilovan rajon]]an administrativine keskuz.
 
 == Istorii ==
@@ -31,6 +31,15 @@ Danilov om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 15 861 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 18..19 tuhad eläjid vll 1989−2001 (19 000 rist. vl 1992). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen Danilovan naižjumalankodi (1918), ph. Mikulai-čudonsädajan jumalanpert' (om saudud vll 1910−1917) i Sündun voznesenjan pühäpert' (1856−1859) oma väges.
 
 Danilovan politehnine kolledž (edel 2015 vot nimitihe tehnikumaks)<ref>[http://dapt.ru/ Danilovan politehnižen kolledžan sait (''dapt.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+House of culture. Danilov. February 2014 - panoramio.jpg|Kul'turkeskuz vl 2014
+Никольская церковь, г. Данилов.jpg|Ph. Mikulai-čudonsädajan jumalanpert' i torguindrived, vn 2019 nägu
+School. Danilov. February 2014 - panoramio (1).jpg|Keskškol nomer 2 Leninan nimed (2014)
+Данилов, Петербургская, дом 16.jpg|Päivkodi (2021, ende naižiden pedagogine škol)
+Станция Данилов.jpg|Danilov-päraudtestancii vl 2013
+</gallery>
 
 == Homaičendad ==
 <references/>
