--- a/Danilov_(lidn).mw
+++ b/Danilov_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 14,868
  | Voz' = 2017
  | Pind = 11.82
- | Fail = 
+ | Fail = Торговые ряды, г Данилов.jpg
  | Pämez' = Ivan Svečuškin<br />(sügüz'ku 2018—)
  | Telefonkod = +7-48538-xx-xxx
  | Avtokod = 76
