--- a/Tutajev.mw
+++ b/Tutajev.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 40,441
  | Voz' = 2017
  | Pind = 25.47
- | Fail = Школа номер 3(Я Люблю Тутаев) - panoramio.jpg
+ | Fail = Тутаев.jpg
  | Pämez' = Sergei Jeršov<br />(2007—)
  | Telefonkod = +7-48533-xx-xxx
  | Avtokod = 76
@@ -29,9 +29,18 @@ Lidn sijadase [[Volg]]an ([[Gor'kijan vezivaradim]]en) molembil randoil, kukhika
 Lidn om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 41 005 ristitud, rajonan seičeme kümnendest. Kaikiš suremb ristitišt oli enamba 45 tuhad eläjid vll 1996−2001 (45 700 rist. vl 1996). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Voskresenskii- i Ristan Zdviženjan päjumalanpertid i seičeme jumalanpertid oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 41 005 ristitud, rajonan seičeme kümnendest. Kaikiš suremb ristitišt oli enamba 45 tuhad eläjid vll 1996−2001 (45 700 rist. vl 1996). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Eläbzdusen i Ristan Zdviženjan päjumalanpertid, dai seičeme jumalanpertid oma olmas lidnas.
 
 Tutajevan politehnine tehnikum<ref>[http://pu41.edu.yar.ru/ Tutajevan politehnižen tehnikuman sait (''pu41.edu.yar.ru'').] {{ref-ru}}</ref> i Ribinskan aviatehnižen universitetan filial oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tolbukhin Monument In Tutayev.jpg|Monument Tolbuhin-maršalan muštoks (2019)
+Ансамбль Воскресенского собора на улице Соборной в Тутаеве.jpg|Sündun Eläbzdusen päjumalanpertin ansambl', vn 2018 nägu
+ТМЗ. Строительство..jpg|Tutajevan likutimtegimen sauvomine 1980-nzil vozil
+Назад в СССР.jpg|«NSTÜ»-puišt lidnan istorižes keskuses vl 2014
+Школа номер 3(Я Люблю Тутаев) - panoramio.jpg|Keskškol nomer 3
+</gallery>
 
 == Homaičendad ==
 <references/>
