*Empty MediaWiki Message*

--- a/Tutajev.mw
+++ b/Tutajev.mw
@@ -39,7 +39,7 @@ Tolbukhin Monument In Tutayev.jpg|Monument Tolbuhin-maršalan muštoks (2019)
 Ансамбль Воскресенского собора на улице Соборной в Тутаеве.jpg|Sündun Eläbzdusen päjumalanpertin ansambl', vn 2018 nägu
 ТМЗ. Строительство..jpg|Tutajevan likutimtegimen sauvomine 1980-nzil vozil
 Назад в СССР.jpg|«NSTÜ»-puišt lidnan istorižes keskuses vl 2014
-Школа номер 3(Я Люблю Тутаев) - panoramio.jpg|Keskškol nomer 3
+Школа номер 3(Я Люблю Тутаев) - panoramio.jpg|Keskškol nomer 3, vn 2012 nägu
 </gallery>
 
 == Homaičendad ==
