--- a/Gavrilov_Jam.mw
+++ b/Gavrilov_Jam.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 17,351
  | Voz' = 2017
  | Pind = 11.29
- | Fail = Gavrilovyam-supermarket.jpg
+ | Fail = Вид на город с высоты птичьего полета.jpg
  | Pämez' = Aleksandr Toššigin<br />(sügüz'ku 2014—)
  | Telefonkod = +7-48534-xx-xxx
  | Avtokod = 76
@@ -32,6 +32,15 @@ Gavrilov Jam om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 791 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 20..21 tuhad eläjid vll 1959−1998 (21 353 rist. vl 1989). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert' om saudud vl 1798, se om avaitud i udessündutamižes. Pühän Jumalanmaman sündundan jumalanpertin (1782) vaiše jändused oma olmas.
 
 Gavrilov Jaman politehnine kolledž<ref>[http://www.pl17yar.ru/ Gavrilov Jaman politehnižen kolledžan sait (''pl17yar.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Gavrilovyam-museum.jpg|Jamšikan muzei (2009)
+Gavrilovyam-church.jpg|ph. Mikulai-čudonsädajan jumalanpert', vn 2009 nägu
+Гаврилов Ям 24102020 02.jpg|«Agat»-tegimen tulendanno vl 2020
+Gavrilovyam-childrenhouse.jpg|Lapsiden sädamižen pert'kulu (2009)
+Gavrilovyam-supermarket.jpg|Supermarket vl 2009
+</gallery>
 
 == Homaičendad ==
 <references/>
