--- a/Gavrilov_Jam.mw
+++ b/Gavrilov_Jam.mw
@@ -36,7 +36,7 @@ Gavrilov Jaman politehnine kolledž<ref>[http://www.pl17yar.ru/ Gavrilov Jaman p
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Gavrilovyam-museum.jpg|Jamšikan muzei (2009)
-Gavrilovyam-church.jpg|ph. Mikulai-čudonsädajan jumalanpert', vn 2009 nägu
+Gavrilovyam-church.jpg|Ph. Mikulai-čudonsädajan jumalanpert', vn 2009 nägu
 Гаврилов Ям 24102020 02.jpg|«Agat»-tegimen tulendanno vl 2020
 Gavrilovyam-childrenhouse.jpg|Lapsiden sädamižen pert'kulu (2009)
 Gavrilovyam-supermarket.jpg|Supermarket vl 2009
