--- a/Jaroslavl'.mw
+++ b/Jaroslavl'.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Jaroslavl'<br />Ярославль
- | Lidnanznam = Coat of Arms of Yaroslavl (1995).png
+ | Lidnanznam = Coa yaroslavl.svg
  | Flag = Flag of Yaroslavl.svg
  | Lidnanznam text = Jaroslavlin lidnanznam
  | Flag text = Jaroslavlin flag
@@ -8,18 +8,17 @@
  | Eläjiden lugu = 608,722<ref>[http://www.gks.ru/free_doc/doc_2018/bul_dr/mun_obr2018.rar Rosstat. Venäman Federacijan municipaližiden ühtnikoiden ristitišton lugu vn 2018 1. päiväl vilukud (''gks.ru'').] {{ref-ru}}</ref></small>
  | Voz' = 2018
  | Pind = 205.8<ref>[http://city-yaroslavl.ru/city/about/ Jaroslavlin pind. — ''City-yaroslavl.ru''.] {{ref-ru}}</ref>
- | Fail = Kotorosl-1.JPG
+ | Fail = Yarolslav colage.png
  | Pämez' = Vladimir Volkov<br />(reduku 2018—)
  | Telefonkod = +7-4852-xxx-xxx
  | Avtokod = 76
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
 [[Fail:Районы Ярославля.svg|thumb|left|250px|'''Jaroslavlin rajoniden kart:''' {{legend|lime|Dzeržinskijan rajon}} {{legend|maroon|Leninan rajon}} {{legend|yellow|Kirovan rajon}} {{legend|red|Ruskedperekopan rajon}} {{legend|olive|Frunzen rajon}} {{legend|green|Volgantagaine rajon}}]]
-[[Fail:Yaroslavl-strelka.JPG|thumb|left|250px|Emäganpäivän päjumalanpert'.]]
 '''Jaroslavl'''' ({{lang-ru|Ярославль}} [jɪrɐˈslavlʲ]) om lidn da lidnümbrik [[Venäma]]n lodehes. Se om [[Jaroslavlin agj]]an administrativine keskuz da kaikiš suremb lidn, mugažo [[Jaroslavlin rajon]]an keskuz (ei mülü rajonha).
 
 == Istorii ==
-[[Jaroslav I Elonmelev]] pani nügüdläižen eländpunktan alust olden Rostovan ruhtinasen (987−1010), om nimitadud hänen nimen mödhe. Lugetas 1010 vot alusenpanendan vodeks, vl 2010 oigenzihe tuha vot Jaroslavlin alusenpanendaspäi. Eländpunkt mainitase ezmäižen kerdan vl 1071 Rostovan völhoiden vasthalibundan näl'gespäi tekstas.
+[[Jaroslav I Elonmelev]] pani nügüdläižen eländpunktan alust olden Rostovan ruhtinasen (987−1010), om nimitadud hänen nimen mödhe. Lugetas 1010. vot alusenpanendan vodeks, vl 2010 oigenzihe tuha vot Jaroslavlin alusenpanendaspäi. Eländpunkt mainitase ezmäižen kerdan vl 1071 Rostovan völhoiden vasthalibundan näl'gespäi tekstas.
 
 Jaroslavlin kremlin čaptud seinäd sädiba koumesaumnikad, järed torguindlidn sijazihe lodeheze sišpäi. Enččen Spasan-Toižetamižen mez'jumalankodin pertid (11.-12. voz'sadaspäi) sijadasoiš lidnan istorižes keskuses.
 
@@ -51,6 +50,21 @@ Jaroslavlin sebruzlidnoiden nimikirjutez kožundkirjutesiden ühthižtöiš alle
 * {{RUS|#}} [[Petroskoi]], [[Karjalan Tazovaldkund]], [[Venäma]] (2003)
 
 Jaroslavliš om [[Saksanma]]n, [[Francii|Francijan]] da [[Anglii|Anglijan]] kožmusen pertid.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом вице-губернатора на улице Андропова.jpg|Lidnan ohjastusen pert' (merii, 2017)
+Yaroslavl-strelka.JPG|Emäganpäivän päjumalanpert' Volgan i Kotoroslin ühthejoksmusen tahos, vn 2010 nägu
+ЯМЗ проходная 2014.jpg|Jaroslavlin likutimtegimen tulend vl 2014
+Yaroslavl. Yaroslavl Shipyard P5212697 2200.jpg|Laivansauvomižen tegim vl 2018
+Yar kotorosl hotel.JPG|«Jubileinaja»-adivpert' (2010)
+Korpg.jpg|Jaroslavlin valdkundaline tehnine universitet (2018, päine korpus)
+Yar arena.JPG|«Arena 2000»-koncertsportkompleks vl 2003
+Volkov Drama Theater in Yaroslavl 01.jpg|Akademine dramteatr Volkovan nimed (2015)
+Iaroslavl le Phare à Volzhskaya Embankment.JPG|Jogivaldmad (passažirterminal, 2018)
+Kotorosl-1.JPG|Avtoerižtazoristte lidnan keskuzpalas
+Ярославль-Главный 02.jpg|Jaroslavl' Päine-raudtestancijan sauvuz vl 2014
+</gallery>
 
 == Tetabad ristitud ==
 ;Sündnuded
